--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="eng">
   <head>
     <title>Steve's style guide</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,200;1,600&display=swap" rel="stylesheet">
